--- a/nieruchomości/Views/Home/ConfirmOffer.cshtml
+++ b/nieruchomości/Views/Home/ConfirmOffer.cshtml
@@ -1,5 +1,6 @@
 ﻿@model Models.ViewModels.CreateOffer
 @using Microsoft.Ajax.Utilities
+@using nieruchomości.Helpers
 <div class="row" style="margin-right: 15px">
     <div class="col-md-12 custom-left-panel" style="margin-left: 15px">
         <h4>Podsumowanie oferty</h4>
@@ -49,7 +50,7 @@
                                     </div>
                                     <div class="col-md-6">
                                         <small>Nieruchomość:</small><br/>
-                                        @Model.AdType
+                                        @EnumNameHelper.GetAdType(Model.AdType)
                                     </div>
                                 </div>
                                 <div class="row" style="margin-bottom: 10px">
